Somewhat sorted the issues with the <p> alignment

--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
 body {
   background-color: #FFA07A;
   font-family: 'Lato', sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
 }
 
-.content, .eight-ball, .answer {
+.content, .eight-ball, body {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +11,10 @@ body {
   flex-wrap: wrap;
 }
 .content {
-  width: 800px;
+  width: 600px;
+  border:1px solid rgba(105,105,105,0.5);
+  border-radius: 10px;
+  background-color: #ffd7c7;
 }
 
 .eight-ball {
@@ -34,16 +32,14 @@ body {
   width: 50%;
   height: 50%;
   border: 1px solid #353B3C;
-  text-align: center;
+
 
 }
-#eight {
+#eight { /*move to the middle you bastard!!!! */
   color: blue;
   font-size: 8em;
-
-
-
-
+  margin: 0 40px;
+  text-align: center;
 
 }
 /*font-family: 'Kanit', sans-serif;
